Added .gitignore to exclude large and unnecessary files
Former-commit-id: 738c275f1ec9cf173bfa628f71396c37c39a0bf9

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
+# Ignore virtual environment
 venv/
+
+# Ignore large binary files
+*.exe
+*.dll
+*.pyd
+
+# Ignore dataset or CSV files
+*.csv
+
+# Ignore model files (if any)
+*.h5
+*.pkl
+*.joblib
+
